--- a/Stage Mage/Stage Mage/Base.lproj/Main.storyboard
+++ b/Stage Mage/Stage Mage/Base.lproj/Main.storyboard
@@ -17,14 +17,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="dby-7I-CuQ" appends="YES" id="XYo-Ai-q5U"/>
+                        </connections>
                     </view>
                     <connections>
-                        <outlet property="MyView" destination="8bC-Xf-vdC" id="Maw-v6-LpR"/>
                         <outlet property="myView" destination="8bC-Xf-vdC" id="4Lw-e8-wx3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="dby-7I-CuQ">
+                    <connections>
+                        <action selector="Tele:" destination="BYZ-38-t0r" id="Ek0-CM-NX4"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="19.424460431654676" y="12.949640287769785"/>
         </scene>
