--- a/Stage Mage/Stage Mage/Base.lproj/Main.storyboard
+++ b/Stage Mage/Stage Mage/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="ipad10_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,14 +17,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SWL Caf" translatesAutoresizingMaskIntoConstraints="NO" id="xuY-kC-dDh">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wdN-as-0Pf">
                                 <rect key="frame" x="0.0" y="20" width="1112" height="814"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fae-1o-Zgu">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SWL Caf" translatesAutoresizingMaskIntoConstraints="NO" id="xuY-kC-dDh">
+                                        <rect key="frame" x="0.0" y="0.0" width="1112" height="814"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="xuY-kC-dDh" secondAttribute="trailing" id="0Wy-NT-0ko"/>
+                                    <constraint firstItem="xuY-kC-dDh" firstAttribute="top" secondItem="wdN-as-0Pf" secondAttribute="top" id="FRG-ZS-mtI"/>
+                                    <constraint firstAttribute="bottom" secondItem="xuY-kC-dDh" secondAttribute="bottom" id="JcH-Ak-yb1"/>
+                                    <constraint firstItem="xuY-kC-dDh" firstAttribute="centerY" secondItem="wdN-as-0Pf" secondAttribute="centerY" id="TrF-rh-5dA"/>
+                                    <constraint firstItem="xuY-kC-dDh" firstAttribute="centerX" secondItem="wdN-as-0Pf" secondAttribute="centerX" id="Xav-ht-oW5"/>
+                                    <constraint firstItem="xuY-kC-dDh" firstAttribute="leading" secondItem="wdN-as-0Pf" secondAttribute="leading" id="ZU8-05-eUG"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="42S-wP-HHC"/>
+                                </connections>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fae-1o-Zgu">
                                 <rect key="frame" x="81" y="114" width="79" height="68"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <size key="titleShadowOffset" width="0.0" height="10"/>
                                 <state key="normal" title="Button" image="Up Icon">
@@ -34,9 +48,8 @@
                                     <action selector="MenuShift:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JcY-dB-j4I"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-vq-tQm">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-vq-tQm">
                                 <rect key="frame" x="0.0" y="20" width="1112" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgp-fJ-qtY">
                                         <rect key="frame" x="80" y="4" width="78" height="78"/>
@@ -113,6 +126,20 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wdN-as-0Pf" secondAttribute="trailing" id="1qA-IX-x4h"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fae-1o-Zgu" secondAttribute="trailing" constant="952" id="58m-0T-nXy"/>
+                            <constraint firstItem="wdN-as-0Pf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6O1-2O-npC"/>
+                            <constraint firstItem="wdN-as-0Pf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8JE-Gr-4x0"/>
+                            <constraint firstItem="gBn-vq-tQm" firstAttribute="trailing" secondItem="wdN-as-0Pf" secondAttribute="trailing" id="AaO-EK-FzQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fae-1o-Zgu" secondAttribute="bottom" constant="652" id="EI6-js-Gig"/>
+                            <constraint firstItem="gBn-vq-tQm" firstAttribute="leading" secondItem="wdN-as-0Pf" secondAttribute="leading" id="KHY-0D-eEp"/>
+                            <constraint firstItem="fae-1o-Zgu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="81" id="Lsr-zH-rOk"/>
+                            <constraint firstItem="gBn-vq-tQm" firstAttribute="top" secondItem="wdN-as-0Pf" secondAttribute="top" id="Vog-9m-O7l"/>
+                            <constraint firstItem="fae-1o-Zgu" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="bottom" constant="8" symbolic="YES" id="dpY-RV-DNP"/>
+                            <constraint firstItem="wdN-as-0Pf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fbE-44-owb"/>
+                            <constraint firstAttribute="bottom" secondItem="gBn-vq-tQm" secondAttribute="bottom" constant="728" id="mta-xU-iuG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dby-7I-CuQ" appends="YES" id="XYo-Ai-q5U"/>
@@ -136,6 +163,7 @@
                         <outlet property="SetButton" destination="srU-y8-bj7" id="CFg-CQ-Rcg"/>
                         <outlet property="TrashButton" destination="woH-zW-HPa" id="7Eg-5d-7Cx"/>
                         <outlet property="myView" destination="8bC-Xf-vdC" id="4Lw-e8-wx3"/>
+                        <outlet property="scrollView" destination="wdN-as-0Pf" id="UVS-qI-brO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -156,7 +184,7 @@
         <image name="Open File Tool" width="960" height="720"/>
         <image name="Props Icon" width="960" height="720"/>
         <image name="Rotate Tool" width="960" height="720"/>
-        <image name="SWL Caf" width="217.41732788085938" height="184.25196838378906"/>
+        <image name="SWL Caf" width="2301" height="1950"/>
         <image name="Save Icon" width="960" height="720"/>
         <image name="Selection Tool" width="960" height="720"/>
         <image name="Sets icon" width="960" height="720"/>
