Has rotate to certain degree 3/12/2018

--- a/Alpha5.10_StageMage(Jacky)/Stage Mage/Base.lproj/Main.storyboard
+++ b/Alpha5.10_StageMage(Jacky)/Stage Mage/Base.lproj/Main.storyboard
@@ -199,7 +199,7 @@
                                         <attributedString key="attributedText">
                                             <fragment content="Animations">
                                                 <attributes>
-                                                    <font key="NSFont" size="36" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="36"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -269,7 +269,7 @@
                                         <attributedString key="attributedText">
                                             <fragment content="Properties">
                                                 <attributes>
-                                                    <font key="NSFont" size="36" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="36"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -290,7 +290,7 @@
                                         <attributedString key="attributedText">
                                             <fragment content="X:">
                                                 <attributes>
-                                                    <font key="NSFont" size="60" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="60"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -312,7 +312,7 @@
                                             <fragment content="Y:">
                                                 <attributes>
                                                     <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                    <font key="NSFont" size="55" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="55"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -333,7 +333,7 @@
                                         <attributedString key="attributedText">
                                             <fragment content="W:">
                                                 <attributes>
-                                                    <font key="NSFont" size="40" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="40"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -354,7 +354,7 @@
                                         <attributedString key="attributedText">
                                             <fragment content="H:">
                                                 <attributes>
-                                                    <font key="NSFont" size="55" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="55"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -388,8 +388,8 @@
                                             <fragment content=":">
                                                 <attributes>
                                                     <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                    <font key="NSFont" size="47" name="BellGothicStd-Bold"/>
-                                                    <font key="NSOriginalFont" size="55" name="BellGothicStd-Bold"/>
+                                                    <font key="NSFont" metaFont="system" size="47"/>
+                                                    <font key="NSOriginalFont" metaFont="system" size="55"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="leftToRight" defaultTabInterval="36" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
                                                         <tabStops/>
                                                     </paragraphStyle>
@@ -617,7 +617,7 @@
         <image name="Open File Tool" width="960" height="720"/>
         <image name="Props Tool" width="960" height="720"/>
         <image name="Rotate Tool" width="960" height="720"/>
-        <image name="SWL Caf" width="217.41732788085938" height="184.25196838378906"/>
+        <image name="SWL Caf" width="2301" height="1950"/>
         <image name="Save Tool" width="960" height="720"/>
         <image name="Selection Tool" width="960" height="720"/>
         <image name="Sets icon" width="960" height="720"/>
