--- a/Beta3.1:4_StageMage(Jacky)/Stage Mage/Base.lproj/Main.storyboard
+++ b/Beta3.1:4_StageMage(Jacky)/Stage Mage/Base.lproj/Main.storyboard
@@ -24,6 +24,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="1112" height="814"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFW-Id-mXs">
+                                        <rect key="frame" x="81" y="445" width="662" height="104"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="xuY-kC-dDh" secondAttribute="trailing" priority="999" id="DdU-XT-y0t"/>
@@ -50,13 +57,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBn-vq-tQm">
                                 <rect key="frame" x="0.0" y="20" width="1112" height="81.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KB" translatesAutoresizingMaskIntoConstraints="NO" id="UTc-o3-oPB">
-                                        <rect key="frame" x="4" y="4" width="82" height="73.5"/>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fgp-fJ-qtY">
                                         <rect key="frame" x="90" y="4" width="81" height="73.5"/>
                                         <state key="normal" title="Button" image="Save Tool"/>
+                                        <connections>
+                                            <segue destination="dF5-lw-vjG" kind="show" id="vI8-GY-HPA"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vVm-cY-9tI">
                                         <rect key="frame" x="175" y="4" width="81" height="73.5"/>
@@ -130,8 +136,6 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="hk3-OC-4eN" firstAttribute="leading" secondItem="vVm-cY-9tI" secondAttribute="trailing" constant="4" id="1BH-wT-jNE"/>
-                                    <constraint firstItem="UTc-o3-oPB" firstAttribute="leading" secondItem="gBn-vq-tQm" secondAttribute="leading" constant="4" id="21s-KE-i70"/>
-                                    <constraint firstItem="UTc-o3-oPB" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="2pH-Cv-NQl"/>
                                     <constraint firstItem="cTC-7a-HTz" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="5Cf-vf-i5H"/>
                                     <constraint firstAttribute="bottom" secondItem="cTC-7a-HTz" secondAttribute="bottom" constant="4" id="5T5-aj-hfM"/>
                                     <constraint firstAttribute="bottom" secondItem="woH-zW-HPa" secondAttribute="bottom" constant="4" id="605-fe-w3b"/>
@@ -150,7 +154,6 @@
                                     <constraint firstItem="fgp-fJ-qtY" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="OVf-zZ-dV2"/>
                                     <constraint firstItem="nVI-eV-Dml" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="OWw-xf-HmO"/>
                                     <constraint firstItem="vVm-cY-9tI" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="PO3-2Y-Iz7"/>
-                                    <constraint firstAttribute="bottom" secondItem="UTc-o3-oPB" secondAttribute="bottom" constant="4" id="QJk-m0-NF0"/>
                                     <constraint firstItem="4cL-aS-V0F" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="RPn-Mp-mA4"/>
                                     <constraint firstItem="ub9-xg-7uF" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="S5w-eF-ZQj"/>
                                     <constraint firstAttribute="bottom" secondItem="XCc-gT-KqL" secondAttribute="bottom" constant="4" id="Sfv-b3-VWc"/>
@@ -168,7 +171,6 @@
                                     <constraint firstItem="2wC-gk-66e" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="a0B-VI-jhA"/>
                                     <constraint firstItem="ub9-xg-7uF" firstAttribute="width" secondItem="woH-zW-HPa" secondAttribute="width" id="cAB-Lf-VOu"/>
                                     <constraint firstItem="woH-zW-HPa" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="cZ1-G5-eUa"/>
-                                    <constraint firstItem="UTc-o3-oPB" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="cfV-V0-SB6"/>
                                     <constraint firstItem="xvs-4F-4Vw" firstAttribute="leading" secondItem="XCc-gT-KqL" secondAttribute="trailing" constant="4" id="dhD-mc-1s4"/>
                                     <constraint firstItem="2wC-gk-66e" firstAttribute="height" secondItem="woH-zW-HPa" secondAttribute="height" id="duG-K7-UCO"/>
                                     <constraint firstItem="4cL-aS-V0F" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="eXV-aj-Qax"/>
@@ -179,7 +181,6 @@
                                     <constraint firstItem="2wC-gk-66e" firstAttribute="leading" secondItem="4cL-aS-V0F" secondAttribute="trailing" constant="4" id="gaM-7h-RuU"/>
                                     <constraint firstItem="nVI-eV-Dml" firstAttribute="leading" secondItem="cTC-7a-HTz" secondAttribute="trailing" constant="4" id="iU8-rg-JBP"/>
                                     <constraint firstItem="xvs-4F-4Vw" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="jaE-2N-SJq"/>
-                                    <constraint firstItem="fgp-fJ-qtY" firstAttribute="leading" secondItem="UTc-o3-oPB" secondAttribute="trailing" constant="4" id="kDZ-d1-vBt"/>
                                     <constraint firstItem="hk3-OC-4eN" firstAttribute="width" secondItem="woH-zW-HPa" secondAttribute="width" id="lvm-jF-Thy"/>
                                     <constraint firstItem="XCc-gT-KqL" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="n2Z-GI-deb"/>
                                     <constraint firstItem="ub9-xg-7uF" firstAttribute="top" secondItem="gBn-vq-tQm" secondAttribute="top" constant="4" id="nBK-Wh-hkS"/>
@@ -616,6 +617,7 @@
                         <outlet property="colourSelectThree" destination="emf-HY-Dzm" id="SPY-vb-LIy"/>
                         <outlet property="colourSelectTwo" destination="2aR-hW-QDg" id="Ebx-ea-g4c"/>
                         <outlet property="heightInfoBox" destination="fbI-mT-t5f" id="KhR-q6-s1G"/>
+                        <outlet property="label" destination="PFW-Id-mXs" id="RaG-0g-vJ8"/>
                         <outlet property="myView" destination="8bC-Xf-vdC" id="4Lw-e8-wx3"/>
                         <outlet property="nameInfoBox" destination="tqX-SQ-NRr" id="lz9-jc-VBM"/>
                         <outlet property="pauseButon" destination="M6O-v6-b51" id="kax-Db-4JH"/>
@@ -636,18 +638,53 @@
             </objects>
             <point key="canvasLocation" x="19.424460431654676" y="12.949640287769785"/>
         </scene>
+        <!--Second View Controller-->
+        <scene sceneID="lzl-fc-4j6">
+            <objects>
+                <viewController id="dF5-lw-vjG" customClass="SecondViewController" customModule="Stage_Mage" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Kg-Vl-atn">
+                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iYT-rk-kXc">
+                                <rect key="frame" x="553" y="364" width="37" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Enter"/>
+                                <connections>
+                                    <action selector="enter:" destination="dF5-lw-vjG" eventType="touchUpInside" id="EVh-49-7Hl"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mqf-IZ-JJH">
+                                <rect key="frame" x="410" y="326" width="322" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="VZI-ne-pYJ"/>
+                    </view>
+                    <connections>
+                        <outlet property="textField" destination="mqf-IZ-JJH" id="irf-vd-0gG"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="results" id="NHh-Hr-x5n"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KAp-Er-C7d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="696.58273381294964" y="12.949640287769785"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Actor Shape Tool" width="960" height="720"/>
         <image name="Animation Tool" width="960" height="720"/>
         <image name="Camera Tool" width="960" height="720"/>
         <image name="Colour Icon" width="511" height="384"/>
-        <image name="KB" width="1080" height="1080"/>
         <image name="Lighting Tool" width="960" height="720"/>
         <image name="Open File Tool" width="960" height="720"/>
         <image name="Props Tool" width="960" height="720"/>
         <image name="Rotate Tool" width="960" height="720"/>
-        <image name="SWL Caf" width="217.41732788085938" height="184.25196838378906"/>
+        <image name="SWL Caf" width="2301" height="1950"/>
         <image name="Save Tool" width="960" height="720"/>
         <image name="Selection Tool" width="960" height="720"/>
         <image name="Sets icon" width="960" height="720"/>
